# shortestroute

./: .coveragerc  .gitignore  .pylintrc  README.md  dijkstra.txt  jps.txt  pyproject.toml  sydney.txt  test.map
.github/workflows/: main.yml
Documentation/: maarittelydokumentti.md
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: algoritmien_vertailu.py  apufunktiot.py  apumetodit.py  dijkstra.py  index.py  jps.py  ui.py
src/tests/: dijkstra_test.py  jps_test.py  shortestroute_test.py
