[tool.poetry]
name = "shortestroute"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pillow = "^9.3.0"
text-to-image = "^0.0.5"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
